# RegisterMP2310

./: .gitignore  CMakeLists.txt  Ethernet通信说明.txt  README.md
App/: CMakeLists.txt  main.cpp
App/src/: tcp_client.cpp  tcp_client.h
Simulator/: CMakeLists.txt  integration_tests.cpp  main.cpp
Simulator/src/: tcp_server.cpp  tcp_server.h
common/: CMakeLists.txt  protocol.cpp  protocol.h  protocol_tests.cpp
scripts/: fetch_thirdparty.ps1
